# gltut-c

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  ChangeLog.md  INSTALL.md  LICENSE  Makefile.am  NEWS  README.md  autoworld.geany  configure.ac
lib/: Makefile.am  debug.c  debug.h
src/: .gitignore  Makefile.am  a-defs.h  a-main.c  debug.h  regular_polyhedron.txt  tut0.c  tut1.c  tut2.c  tut3.c  tut4.c  tut5.c  z-camera.c  z-camera.h  z-eye.c  z-eye.h  z-geom.c  z-geom.h  z-glfw.c  z-glfw.h  z-gui.c  z-gui.h  z-input.c  z-input.h  z-light.c  z-light.h  z-list.c  z-list.h  z-main.h  z-mat.c  z-mat.h  z-materials.c  z-materials.h  z-maths.c  z-maths.h  z-models.c  z-models.h  z-opengl.c  z-opengl.h  z-options.c  (+15 more)
src/shaders/: tut0.frag  tut0.vert  tut1.frag  tut2.frag  tut2.vert  tut3.frag  tut3.vert  tut4-plain.frag  tut4-plain.vert  tut4-texture.frag  tut5-plain.frag  tut5-plain.vert  tut5-texture.frag
